<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorite.FavoriteFragment">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchButtonSubredditsPosts"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:track="@drawable/new_popular_selector_track"
        android:thumb="@drawable/new_popular_selector_thumb"
        app:showText="true"
        android:textStyle="bold"
        android:textOff="@string/subreddits"
        android:textOn="@string/posts"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/switchButtonSubredditsPosts"
        app:layout_constraintBottom_toBottomOf="@+id/switchButtonSubredditsPosts"
        app:layout_constraintStart_toStartOf="@+id/switchButtonSubredditsPosts"
        app:layout_constraintEnd_toEndOf="@+id/switchButtonSubredditsPosts"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/subreddits"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/posts"/>


    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchButtonAllSaved"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/switchButtonSubredditsPosts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:track="@drawable/new_popular_selector_track"
        android:thumb="@drawable/new_popular_selector_thumb"
        app:showText="true"
        android:textStyle="bold"
        android:textOff="@string/all"
        android:textOn="@string/saved"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/switchButtonAllSaved"
        app:layout_constraintBottom_toBottomOf="@+id/switchButtonAllSaved"
        app:layout_constraintStart_toStartOf="@+id/switchButtonAllSaved"
        app:layout_constraintEnd_toEndOf="@+id/switchButtonAllSaved"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/all"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/saved"/>


    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/switchButtonAllSaved"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RV_favorites_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_margin="10dp"
            />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?android:colorBackground"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/switchButtonAllSaved"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/humblr_main"
            />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center">

        <TextView
            android:id="@+id/refresh_page_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/network_error"
            />

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reload"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>